Remove datatable filter btn spacing corrected

--- a/nocout/nocout/static/css/nocout_default.css
+++ b/nocout/nocout/static/css/nocout_default.css
@@ -480,7 +480,7 @@ th.vAlign_middle, .vAlign_middle b {
   margin-bottom: 0px;
 }
 .remove_advance_filters_btn {
-  margin-left: 15px !important;
+  margin-left: 10px !important;
 }
 .reset_filter_li {
   /*margin-right: 5.5%;*/
